last edit for now

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -18,7 +18,7 @@ To deploy BOSH Lite, you do not need a release, a stemcell, or a manifest, only 
 
 ### <a id="micro"></a> MicroBOSH  ###
 
-MicroBOSH runs within a single VM on the cloud infrastructure that are supported for deploying software with BOSH.
+MicroBOSH runs within a single VM on any cloud infrastructure that is supported for deploying software with BOSH.
 To deploy MicroBOSH you need a stemcell and a manifest, but no release.
 MicroBOSH is suited to deploying software (as an alternative to multi-VM BOSH), and is only supported way to deploy BOSH for production.
 MicroBOSH is included within BOSH.
@@ -26,17 +26,13 @@ MicroBOSH is included within BOSH.
 Once you have BOSH Lite, MicroBOSH, or equivalent software running, you can use it to deploy BOSH
 (in the sense of "full" BOSH which runs on multiple VMs), or any other software that BOSH can deploy.
 
-**Note**: If you do not need to deploy full BOSH, skip to [Before Deploying Software with BOSH, Obtain the Stemcell, Release and Manifest](#before) below.
+**Note**: If you do not need to deploy multi-VM BOSH, skip to [Before Deploying Software with BOSH, Obtain the Stemcell, Release and Manifest](#before) below.
 
 To deploy BOSH using BOSH Lite, MicroBOSH, or equivalent software, you must:
 
-* Download a **release** of BOSH
+* [Download] (http://bosh_artifacts.cfapps.io/) a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
 
-* Download a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
-You obtain a stemcell from Pivotal Network.
-
-*  **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
-You can modify an example manifest to suit your purposes, or use a tool like spiff to create a manifest.
+* [Create a **manifest**] (http://localhost:9292/bosh/create-manifest.html) that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 
 ## <a id="before"></a> Before Deploying Software with BOSH, Obtain the Stemcell, Release and Manifest  ##
 
