--- a/glossary.html.md.erb
+++ b/glossary.html.md.erb
@@ -19,7 +19,7 @@ Reading through this glossary should help you quickly become comfortable working
 | Jumpbox | A VM that acts as a single access point for the VMs in a BOSH deployment. For resilience, there should be more than one jumpbox. Allowing access through jumpboxes and disabling access to the other VMs is a common security measure. |
 | Manifest | A YAML file that identifies one or more release, one or more stemcells and specifies how to configure them for a given deployment. |
 | MicroBOSH | An essentially complete BOSH that runs within a single VM. One use of the MicroBOSH is to orchestrate the deployment of a BOSH on multiple VMs. |
-| PaaS | Platform as a Service, where large-scale distributed software is deployed to the platform, abstracting away details of the underlying IaaS. Cloud Foundry is PaaS. |
+| PaaS | Platform as a Service, where large-scale distributed software is deployed to the platform. The PaaS abstracts away details of the underlying IaaS. Cloud Foundry is a PaaS. |
 | Release | A collection of configuration files, job definitions, source code, package definitions and accompanying information needed to make a software component deployable by BOSH. A release should have no dependencies that need to be fetched from the internet. |
 | Stemcell | A generic VM image that BOSH clones and configures to during deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products. |
 | Task | The basic unit of work performed by BOSH. You can get the status and logs for any task. You can monitor the task throughout its lifecycle, which progresses through states like started, running, done, and error. |
