--- a/glossary.html.md.erb
+++ b/glossary.html.md.erb
@@ -4,7 +4,7 @@ title: BOSH Glossary
 
 Several familiar terms take on new meanings when you use them to talk about BOSH.
 The "language" of BOSH also includes some terms you won't find anywhere else.
-It is a good idea to read through this Glossary as you are first getting to know BOSH.
+It is a good idea to read through this glossary as you are first getting to know BOSH.
 
 | Term          | Definition   |
 | ------------- | ------------ |
