--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -30,9 +30,9 @@ Once you have BOSH Lite, MicroBOSH, or equivalent software running, you can use 
 
 To deploy BOSH using BOSH Lite, MicroBOSH, or equivalent software, you must:
 
-* [Download] (http://bosh_artifacts.cfapps.io/) a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
+* Download a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
 
-* [Create](http://localhost:9292/bosh/create-manifest.html) a **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
+* [Create](./create-manifest.html) a **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 
 ## <a id="before"></a> Before Deploying Software with BOSH, Obtain the Stemcell, Release and Manifest  ##
 
@@ -42,7 +42,7 @@ Before you deploy, you must have:
 You can obtain a release from a software provider, or create one yourself.
 
 * A **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
-You obtain a stemcell from the [public download site](http://bosh_artifacts.cfapps.io/).
+You obtain a stemcell from the public download site.
 
 * A **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 You can modify an example manifest to suit your purposes, or use a tool like spiff to create a manifest.
