edit first sentence

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -2,7 +2,7 @@
 title: Basic BOSH Workflow
 ---
 
-While the distributed software you use BOSH to deploy can be complex, the basic patterns for working with BOSH are not.
+While the distributed software you use BOSH to deploy can be complex, the basic patterns for working with BOSH are straightforward.
 
 ## <a id="options"></a> Deploying BOSH  ##
 
