re-do link test

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -30,7 +30,7 @@ Once you have BOSH Lite, MicroBOSH, or equivalent software running, you can use 
 
 To deploy BOSH using BOSH Lite, MicroBOSH, or equivalent software, you must:
 
-* Download a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy, from http://bosh_artifacts.cfapps.io .
+* [Download](http://bosh_artifacts.cfapps.io) a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
 
 * [Create](./create-manifest.html) a **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 
