add outcomes graphic and surrounding prose

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -4,6 +4,14 @@ title: Basic BOSH Workflow
 
 While the distributed software you use BOSH to deploy can be complex, the basic patterns for working with BOSH are straightforward.
 
+You invariably begin by verifying that your IaaS is set up correctly to support BOSH, and then deploying a single-VM BOSH.
+How you proceed from there depends on two questions:
+
+1. Whether you want is to deploy a Cloud Foundry PaaS, deploy other distributed software, or both.
+1. Whether a single-VM BOSH is adequate or you need a multi-VM BOSH as well.
+
+<%= image_tag("bosh-outcomes.png") %>
+
 ## <a id="options"></a> Deploying BOSH  ##
 
 Before you use BOSH to deploy software, you must first deploy BOSH itself.
