put in new link with hypen not underscore, thanks Dmitry

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -38,7 +38,7 @@ Once you have BOSH Lite, MicroBOSH, or equivalent software running, you can use 
 
 To deploy BOSH using BOSH Lite, MicroBOSH, or equivalent software, you must:
 
-* Download a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy, from the bosh_artifacts.cfapps.io download site.
+* [Download](http://bosh-artifacts.cfapps.io) a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
 
 * [Create](./create-manifest.html) a **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 
@@ -50,7 +50,7 @@ Before you deploy, you must have:
 You can obtain a release from a software provider, or create one yourself.
 
 * A **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
-You obtain a stemcell from bosh_artifacts.cfapps.io (the public download site).
+You obtain a stemcell from the [public download site](http://bosh_artifacts.cfapps.io).
 
 * A **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 You can modify an example manifest to suit your purposes, or use a tool like spiff to create a manifest.
