--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -50,7 +50,7 @@ Before you deploy, you must have:
 You can obtain a release from a software provider, or create one yourself.
 
 * A **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
-You obtain a stemcell from the [public download site](http://bosh_artifacts.cfapps.io).
+You obtain a stemcell from the [public download site](http://bosh-artifacts.cfapps.io).
 
 * A **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 You can modify an example manifest to suit your purposes, or use a tool like spiff to create a manifest.
