--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -8,7 +8,7 @@ You invariably begin by verifying that your IaaS is set up correctly to support 
 How you proceed from there depends on two questions:
 
 1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or both.
-1. Whether a single-VM BOSH is adequate or you need a multi-VM BOSH as well.
+1. Whether a single-VM BOSH or a multi-VM BOSH suits your purposes best.
 
 <%= image_tag("bosh-outcomes.png") %>
 
