refine prose around graphic

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -8,7 +8,9 @@ You invariably begin by verifying that your IaaS is set up correctly to support 
 How you proceed from there depends on two questions:
 
 1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or both.
-1. Whether a single-VM BOSH or a multi-VM BOSH suits your purposes best.
+1. Whether the single-VM BOSH can meet your needs, or a multi-VM BOSH is required.
+
+The illustration below shows the paths to these outcomes and the choices along the way.
 
 <%= image_tag("bosh-outcomes.png") %>
 
