--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -7,7 +7,7 @@ While the distributed software you use BOSH to deploy can be complex, the basic 
 You invariably begin by verifying that your IaaS is set up correctly to support BOSH, and then deploying a single-VM BOSH.
 How you proceed from there depends on two questions:
 
-1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or both.
+1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or do both.
 1. Whether the single-VM BOSH can meet your needs, or a multi-VM BOSH is required.
 
 The illustration below shows the paths to these outcomes and the choices along the way.
