begin editing based on BOSH team feedback

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -4,47 +4,50 @@ title: Basic BOSH Workflow
 
 While the distributed software you use BOSH to deploy can be complex, the basic patterns for working with BOSH are straightforward.
 
-You invariably begin by verifying that your IaaS is set up correctly to support BOSH, and then deploying a single-VM BOSH.
+You begin by verifying that your IaaS is set up correctly to support BOSH, and then deploying a single-VM BOSH.
 How you proceed from there depends on two questions:
 
 1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or do both.
-1. Whether the single-VM BOSH can meet your needs, or a multi-VM BOSH is required.
+1. Whether the single-VM BOSH suits your needs, or a multi-VM BOSH is preferable.
 
 The illustration below shows the paths to these outcomes and the choices along the way.
 
 <%= image_tag("bosh-outcomes.png") %>
 
-## <a id="options"></a> Deploying BOSH  ##
+## <a id="single-vm"></a> Deploying Single-VM BOSH  ##
 
 Before you use BOSH to deploy software, you must first deploy BOSH itself.
-You can deploy BOSH with either of the two supported options below, or with experimental and community-based methods not documented here.
+You can choose either of the two supported single-VM BOSHes described below, or experimental, community-based methods not documented here.
+
+### <a id="micro"></a> MicroBOSH  ###
+
+MicroBOSH runs within a single VM on any cloud infrastructure that is supported for deploying software with BOSH.
+To deploy MicroBOSH you need a stemcell and a manifest, but you do not need a release.
+MicroBOSH is suited to deploying software (as an alternative to multi-VM BOSH), and is the only supported way to deploy BOSH for production.
+MicroBOSH is included within the stemcell.
 
 ### <a id="lite"></a> BOSH Lite  ###
 
 [BOSH Lite] (https://github.com/cloudfoundry/bosh-lite) runs within a single VM created with [Vagrant] (http://www.vagrantup.com/).
 Scripts packaged with BOSH Lite make it simple to deploy on a laptop or other local environment.
-In sum, BOSH Lite is a low-cost, low-risk development environment to test and experiment with BOSH.
+BOSH Lite is essentially a low-cost, low-risk development environment to test and experiment with BOSH.
 To deploy BOSH Lite, you do not need a release, a stemcell, or a manifest, only Vagrant and related files.
 
-### <a id="micro"></a> MicroBOSH  ###
+## <a id="multi-vm"></a> Deploying Multi-VM BOSH  ##
 
-MicroBOSH runs within a single VM on any cloud infrastructure that is supported for deploying software with BOSH.
-To deploy MicroBOSH you need a stemcell and a manifest, but no release.
-MicroBOSH is suited to deploying software (as an alternative to multi-VM BOSH), and is only supported way to deploy BOSH for production.
-MicroBOSH is included within BOSH.
+Once you have MicroBOSH running, you can use it to deploy multi-VM BOSH or any other software that BOSH can deploy.
 
-Once you have BOSH Lite, MicroBOSH, or equivalent software running, you can use it to deploy BOSH
-(in the sense of "full" BOSH which runs on multiple VMs), or any other software that BOSH can deploy.
+**Note**: As shown in the illustration, deploying Multi-VM BOSH is optional.
 
-**Note**: If you do not need to deploy multi-VM BOSH, skip to [Before Deploying Software with BOSH, Obtain the Stemcell, Release and Manifest](#before) below.
-
-To deploy BOSH using BOSH Lite, MicroBOSH, or equivalent software, you must:
+To deploy BOSH using MicroBOSH you must:
 
 * [Download](http://bosh-artifacts.cfapps.io) a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
 
 * [Create](./create-manifest.html) a **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 
-## <a id="before"></a> Before Deploying Software with BOSH, Obtain the Stemcell, Release and Manifest  ##
+## <a id="deploying"></a> Deploying Software with BOSH  ##
+
+### <a id="before"></a> Before you Deploy  ###
 
 Before you deploy, you must have:
 
@@ -57,9 +60,10 @@ You obtain a stemcell from the [public download site](http://bosh-artifacts.cfap
 * A **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
 You can modify an example manifest to suit your purposes, or use a tool like spiff to create a manifest.
 
-Deployments that use multiple releases and multiple stemcells are supported.
+**Note**: This topic speaks of "a release" and "a stemcell" for the sake of simplicity,
+but BOSH also supports deploying with multiple releases and multiple stemcells.
 
-## <a id="deploying"></a> Deploying Software with BOSH  ##
+### <a id="deploy"></a> Deploying Software BOSH Pattern  ###
 
 To deploy software with BOSH, you perform four steps:
 
@@ -72,10 +76,12 @@ This pattern is at the heart of the BOSH workflow, and its power is in simplicit
 Without it, you would likely need to perform a larger number of tasks, many of them difficult to replicate from deployment to deployment.
 Because deploying software is an iterative process, the amount of labor that this pattern saves is significant.
 
+### <a id="other"></a> Other Activities    ###
+
 Other activities typical of the care and feeding of distributed software deployments include:
 
 * Creating and editing users.
 * Inspecting the state of VMs.
 * Getting (viewing) and cancelling Director tasks.
 
-You perform these activities before or after deployment, or both.
+You perform these activities before, during, or after deployment.
