add opening sentence to prep section

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -15,7 +15,10 @@ and provides examples from a particular deployment which happens to use AWS.
 
 ## <a id="prep"></a> Preparing to Deploy  ##
 
-### <a id="cloud"></a> Set Up your Deployment Area in the Cloud ###
+Your overall goal when preparing to deploy MicroBOSH is ensure that you have a stemcell, a manifest,
+and properly set up environments both locally and in the cloud.
+
+### <a id="cloud"></a> Set Up a Deployment Area in the Cloud ###
 
 You need to collect or decide:
 
