improve first para

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -2,9 +2,10 @@
 title: Deploying MicroBOSH
 ---
 
-MicroBOSH runs within a single VM on any cloud infrastructure that is supported for deploying software with BOSH.
-MicroBOSH is suited to deploying software (as an alternative to multi-VM BOSH).
 The only supported way to deploy BOSH for production is to use MicroBOSH.
+
+MicroBOSH runs within a single VM on any cloud infrastructure that is supported for deploying software with BOSH.
+MicroBOSH is suited to deploying BOSH releases of any software, including multi-VM BOSH.
 
 To deploy MicroBOSH you need a stemcell and a manifest.
 You do not need a release since MicroBOSH itself is included within the stemcell.
