try for better indentation

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -16,22 +16,22 @@ and provides examples from a particular deployment which happens to use AWS.
 
 ## <a id="prep"></a> Preparing to Deploy  ##
 
-Your overall goal when preparing to deploy MicroBOSH is ensure that you have a stemcell, a manifest,
+Your overall goal when preparing to deploy MicroBOSH is to have a stemcell, a manifest,
 and properly set up environments both locally and in the cloud.
 
 ### <a id="cloud"></a> Set up a deployment area in the cloud ###
 
-You need to collect or decide:
+Collect or decide:
 
 1. The deployment name.
-1. The domain, subdomain, and any IaaS-specific information about the where your deployment should reside.
+1. The domain, subdomain, and any IaaS-specific information about where your deployment should reside.
 1. The name and credentials of the user who will administer your deployment.
 
 * For example, on AWS you need:
 
-1. The deployment name.
-1. The domain, subdomain, and primary availability zone.
-1. The name, access key ID, and secret access key for the administrative user for the MicroBOSH you intend to deploy.
+  1. The deployment name.
+  1. The domain, subdomain, and primary availability zone.
+  1. The name, access key ID, and secret access key for the administrative user for the MicroBOSH you intend to deploy.
 
 To obtain the user information you could:
 
