add link in docs-bosh index page

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -5,6 +5,7 @@ title: BOSH
 * [Glossary](glossary.html)
 * [What BOSH is and Why it's Different](what-bosh-is.html)
 * [Basic BOSH Workflow](workflow.html)
+* [Deploying MicroBOSH](deploy-microbosh.html)
 * [Creating a BOSH Deployment Manifest](create-manifest.html)
 * [How BOSH Works](how-bosh-works.html)
 * [Local Setup](setup/index.html)
