--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -10,7 +10,7 @@ MicroBOSH is suited to deploying BOSH releases of any software, including multi-
 To deploy MicroBOSH you need a stemcell and a manifest.
 You do not need a release since MicroBOSH itself is included within the stemcell.
 
-The details of how you deploy MicroBOSH depend on which IaaS you use.
+The IaaS you use determines the details of how you deploy MicroBOSH.
 This topic outlines a general procedure that applies for all IaaS's,
 and provides examples from a particular deployment which happens to use AWS.
 
