improve AWS user creation instructions

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -38,11 +38,11 @@ To obtain the user information you could:
 1. Log into AWS.
 1. Create a new group of users.
 1. Create a user to administer the MicroBOSH.
-* AWS takes you through a series of wizard-like popup screens.
-Pause when you get to the one that says:
+1. As you respond to the prompts in the wizard-like AWS popup screen, pause when you see the message:
 "Your 1 User(s) have been created successfully.
 This is the last time these User security credentials will be available for download."
 1. Copy the `Access Key ID` and the `Secret Access Key` for later use.
+1. Finish the user creation process as directed by the prompts.
 
 ### <a id="local"></a> Set up a local work area  ###
 
