--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -39,8 +39,8 @@ To obtain the user information you could:
 1. Create a new group of users.
 1. Create a user to administer the MicroBOSH.
 1. As you respond to the prompts in the wizard-like AWS popup screen, pause when you see the message:
-"Your 1 User(s) have been created successfully.
-This is the last time these User security credentials will be available for download."
+
+    `Your 1 User(s) have been created successfully. This is the last time these User security credentials will be available for download.`
 1. Copy the `Access Key ID` and the `Secret Access Key` for later use.
 1. Finish the user creation process as directed by the prompts.
 
